--- a/index.html
+++ b/index.html
@@ -31,34 +31,27 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>MAC Address, Serial Number and Firmware Report for Avaya IP Endpoints</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>There are a few data elements that cannot easily be gathered through the traditional system administration terminal or System Manager. It's useful to perform an audit of all of your H323 IP-Phones. For me, it's useful to gather mac-addresses before a sytem or firmware upgrade. In the event you lose a phone, knowing the mac-address allows you to track down the phone to a specific port.Unfortunately, the only means of doing this is to peform a status station on each and every IP-endpoint.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>In addition, there is useful information about the end-points that can only be gathered via SNMP. For example, the serial number of the phone, the list of alternate gate keepers, active DHCP server, etc.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>This script can be used to generate a CSV report of the following elements:</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>1) Extension 2) Serial number 3) Configured set-type 4) IP-Address 5) Service State 6) Connected Set-type 7) MAC-Address 8) Firmware version</p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>The first subroutine performs a 'list-registered' command against a givenvCommunication Manager instance. The second subroutine performs a status station for each extension gathered in the list-registered sub-routine. The third subroutine performs an snmp get on each endpoint using the ip-address gathered int he list-registered subroutine.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Any of the subroutines can be modified to gather alternative data elements. However, the Avaya OSSI labels the data elements as hexadecimal field identifiers (FIDs). Therefore, you may need to run a few test commands to determine what FIDs you want.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>The $MIB1 value in the SNMP subroutine can be changed to any Avaya endpoint OID you want to snag.</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>The "$PBX" variable defines the CM instance. The connection details of each instance are defined in the OSSI Module (cli_ossi.pm).</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>The cli_ossi module listed below is a modified version of Ben Roy's Definity.pm which is used to interface with Communication Manager via XML Interface. <a href="https://github.com/benroy73/pbxd">https://github.com/benroy73/pbxd</a>.</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>SNMP LIBRARY The following modules should not be confused with the SNMP modues perl modules found in CPAN (i.e. Net::SNMP). These modules were previously maintained by <a href="http://www.switch.ch/misc/leinen/snmp/perl/">http://www.switch.ch/misc/leinen/snmp/perl/</a> They are now publicly available on code.google.com/p/snmp-session The entire package which includes all three modules can be downloaded modules can be downloaded from <a href="https://snmp-session.googlecode.com/files/SNMP_Session-1.13.tar.gz">https://snmp-session.googlecode.com/files/SNMP_Session-1.13.tar.gz</a></p>
       </section>
     </div>
 
