--- a/index.html
+++ b/index.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Avaya-aura-cm-script : ">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Avaya-aura-cm-script by mick-shaw</title>
+    <title>Avaya-aura-cm-script</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Avaya-aura-cm-script</h1>
-        <h2></h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/mick-shaw/Avaya-Aura-CM-Script" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Avaya-aura-cm-script</h1>
+          <h2 id="project_tagline"></h2>
 
-    <div class="container">
-      <section id="main_content">
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="mac-address-serial-number-and-firmware-report-for-avaya-ip-endpoints" class="anchor" href="#mac-address-serial-number-and-firmware-report-for-avaya-ip-endpoints" aria-hidden="true"><span class="octicon octicon-link"></span></a>MAC Address, Serial Number and Firmware Report for Avaya IP Endpoints</h3>
 
-<p>MAC Address, Serial Number and Firmware Report for Avaya IP Endpoints</p>
+<p>There are a few data elements that cannot easily be gathered through the traditional system administration terminal or System Manager. I find it useful to perform an audit of all of your Avaya H323 endpoints before and after upgrades. In the event you lose an endpoint, knowing the mac-address can significantly help you track down the endpoint to a specific port. Unfortunately, the only means of doing this is to perform a status station on each and every endpoint - not very practical or efficient when your dealing with thousands of endpoints.</p>
 
-<p>There are a few data elements that cannot easily be gathered through the traditional system administration terminal or System Manager. It's useful to perform an audit of all of your H323 IP-Phones. For me, it's useful to gather mac-addresses before a sytem or firmware upgrade. In the event you lose a phone, knowing the mac-address allows you to track down the phone to a specific port.Unfortunately, the only means of doing this is to peform a status station on each and every IP-endpoint.</p>
+<p>In addition, there is useful information about the end-points that can only be gathered via SNMP. For example, the serial number of the phone, the list of alternate gate keepers, active DHCP server, etc.  Unless you have expensive management tools already actively managing these devices, it's otherwise impossible to gather this information manually.</p>
 
-<p>In addition, there is useful information about the end-points that can only be gathered via SNMP. For example, the serial number of the phone, the list of alternate gate keepers, active DHCP server, etc.</p>
+<p>This script in its current form can be used to generate a CSV report of the following elements:</p>
 
-<p>This script can be used to generate a CSV report of the following elements:</p>
-
-<p>1) Extension 2) Serial number 3) Configured set-type 4) IP-Address 5) Service State 6) Connected Set-type 7) MAC-Address 8) Firmware version</p>
+<p>1) Extension 
+2) Serial number 
+3) Configured set-type 
+4) IP-Address 
+5) Service State 
+6) Connected Set-type 
+7) MAC-Address 
+8) Firmware version</p>
 
 <p>The first subroutine performs a 'list-registered' command against a givenvCommunication Manager instance. The second subroutine performs a status station for each extension gathered in the list-registered sub-routine. The third subroutine performs an snmp get on each endpoint using the ip-address gathered int he list-registered subroutine.</p>
 
@@ -55,6 +63,15 @@
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Avaya-aura-cm-script maintained by <a href="https://github.com/mick-shaw">mick-shaw</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
