--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Avaya-aura-cm-script : ">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Avaya-aura-cm-script</title>
+    <title>Avaya-aura-cm-script by mick-shaw</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>Avaya-aura-cm-script</h1>
+        <h2></h2>
 
-          <h1 id="project_title">Avaya-aura-cm-script</h1>
-          <h2 id="project_tagline"></h2>
+        <section id="downloads">
+          <a href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/mick-shaw/Avaya-Aura-CM-Script" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="container">
+      <section id="main_content">
         <h3>
 <a id="mac-address-serial-number-and-firmware-report-for-avaya-ip-endpoints" class="anchor" href="#mac-address-serial-number-and-firmware-report-for-avaya-ip-endpoints" aria-hidden="true"><span class="octicon octicon-link"></span></a>MAC Address, Serial Number and Firmware Report for Avaya IP Endpoints</h3>
 
@@ -40,14 +37,16 @@
 
 <p>This script in its current form can be used to generate a CSV report of the following elements:</p>
 
-<p>1) Extension 
-2) Serial number 
-3) Configured set-type 
-4) IP-Address 
-5) Service State 
-6) Connected Set-type 
-7) MAC-Address 
-8) Firmware version</p>
+<ul>
+<li>Extension</li>
+<li>Serial number </li>
+<li>Configured set-type </li>
+<li>IP-Address </li>
+<li>Service State </li>
+<li>Connected Set-type </li>
+<li>MAC-Address </li>
+<li>Firmware version</li>
+</ul>
 
 <p>The first subroutine performs a 'list-registered' command against a givenvCommunication Manager instance. The second subroutine performs a status station for each extension gathered in the list-registered sub-routine. The third subroutine performs an snmp get on each endpoint using the ip-address gathered int he list-registered subroutine.</p>
 
@@ -63,15 +62,6 @@
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Avaya-aura-cm-script maintained by <a href="https://github.com/mick-shaw">mick-shaw</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
     
-
   </body>
 </html>
