--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>There are a few data elements that cannot easily be gathered through the traditional system administration terminal or System Manager. I find it useful to perform an audit of all of your Avaya H323 endpoints before and after upgrades. In the event you lose an endpoint, knowing the mac-address can significantly help you track down the endpoint to a specific port. Unfortunately, the only means of doing this is to perform a status station on each and every endpoint - not very practical or efficient when your dealing with thousands of endpoints.</p>
 
-<p>In addition, there is useful information about the end-points that can only be gathered via SNMP. For example, the serial number of the phone, the list of alternate gate keepers, active DHCP server, etc.  Unless you have expensive management tools already actively managing these devices, it's otherwise impossible to gather this information manually.</p>
+<p>In addition, there is useful information about the end-points that can only be gathered via SNMP. For example, the serial number of the phone, the list of alternate gate keepers, active DHCP server, etc.  Unless you have expensive management tools already actively managing these devices, it can be extremely difficult to gather this information.</p>
 
 <p>This script in its current form can be used to generate a CSV report of the following elements:</p>
 
@@ -56,9 +56,9 @@
 
 <p>The "$PBX" variable defines the CM instance. The connection details of each instance are defined in the OSSI Module (cli_ossi.pm).</p>
 
-<p>The cli_ossi module listed below is a modified version of Ben Roy's Definity.pm which is used to interface with Communication Manager via XML Interface. <a href="https://github.com/benroy73/pbxd">https://github.com/benroy73/pbxd</a>.</p>
+<p>The cli_ossi module included is a modified version of Ben Roy's Definity.pm which is used to interface with Communication Manager via XML Interface. <a href="https://github.com/benroy73/pbxd">https://github.com/benroy73/pbxd</a>.</p>
 
-<p>SNMP LIBRARY The following modules should not be confused with the SNMP modues perl modules found in CPAN (i.e. Net::SNMP). These modules were previously maintained by <a href="http://www.switch.ch/misc/leinen/snmp/perl/">http://www.switch.ch/misc/leinen/snmp/perl/</a> They are now publicly available on code.google.com/p/snmp-session The entire package which includes all three modules can be downloaded modules can be downloaded from <a href="https://snmp-session.googlecode.com/files/SNMP_Session-1.13.tar.gz">https://snmp-session.googlecode.com/files/SNMP_Session-1.13.tar.gz</a></p>
+<p>The SNMP modules included should not be confused with the SNMP perl modules found in CPAN (i.e. Net::SNMP). The modules I've included were previously maintained by <a href="http://www.switch.ch/misc/leinen/snmp/perl/">http://www.switch.ch/misc/leinen/snmp/perl/</a> They are now publicly available on code.google.com/p/snmp-session The entire package which includes all three modules can be downloaded modules can be downloaded from <a href="https://snmp-session.googlecode.com/files/SNMP_Session-1.13.tar.gz">https://snmp-session.googlecode.com/files/SNMP_Session-1.13.tar.gz</a></p>
       </section>
     </div>
 
