--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Avaya-aura-cm-script : ">
+    <title>Avaya-aura-cm-script by mick-shaw</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Avaya-aura-cm-script</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Avaya-aura-cm-script</h1>
+        <p class="header"></p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Avaya-aura-cm-script</h1>
-          <h2 id="project_tagline"></h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/mick-shaw">mick-shaw</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/mick-shaw/Avaya-Aura-CM-Script/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>
 <a id="mac-address-serial-number-and-firmware-report-for-avaya-ip-endpoints" class="anchor" href="#mac-address-serial-number-and-firmware-report-for-avaya-ip-endpoints" aria-hidden="true"><span class="octicon octicon-link"></span></a>MAC Address, Serial Number and Firmware Report for Avaya IP Endpoints</h3>
 
@@ -63,17 +62,11 @@
 
 <p>The SNMP modules included should not be confused with the SNMP perl modules found in CPAN (i.e. Net::SNMP). The modules I've included were previously maintained by <a href="http://www.switch.ch/misc/leinen/snmp/perl/">http://www.switch.ch/misc/leinen/snmp/perl/</a> They are now publicly available on code.google.com/p/snmp-session The entire package which includes all three modules can be downloaded from <a href="https://snmp-session.googlecode.com/files/SNMP_Session-1.13.tar.gz">https://snmp-session.googlecode.com/files/SNMP_Session-1.13.tar.gz</a></p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Avaya-aura-cm-script maintained by <a href="https://github.com/mick-shaw">mick-shaw</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-    
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
