--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
       </header>
       <section>
-        <h3>
-<a id="mac-address-serial-number-and-firmware-report-for-avaya-ip-endpoints" class="anchor" href="#mac-address-serial-number-and-firmware-report-for-avaya-ip-endpoints" aria-hidden="true"><span class="octicon octicon-link"></span></a>MAC Address, Serial Number and Firmware Report for Avaya IP Endpoints</h3>
-
-<hr>
+        <hr>
 
 <h2>
 <a id="wwwpotomacintegrationcom" class="anchor" href="#wwwpotomacintegrationcom" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://www.potomacintegration.com">www.potomacintegration.com</a>
 </h2>
+
+<h3>
+<a id="mac-address-sn-and-firmware-report-for-avaya-ip-endpoints" class="anchor" href="#mac-address-sn-and-firmware-report-for-avaya-ip-endpoints" aria-hidden="true"><span class="octicon octicon-link"></span></a>MAC-Address, SN, and Firmware Report for Avaya IP Endpoints</h3>
 
 <p>There are a few data elements that cannot easily be gathered through the traditional system administration terminal or System Manager. I find it useful to perform an audit of all of your Avaya H323 endpoints before and after upgrades. In the event you lose an endpoint, knowing the mac-address can significantly help you track down the endpoint to a specific port. Unfortunately, the only means of doing this is to perform a status station on each and every endpoint - not very practical or efficient when you're dealing with thousands of endpoints.</p>
 
