Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <li>Firmware version</li>
 </ul>
 
-<p>The first subroutine performs a 'list-registered' command against a given Communication Manager instance. The second subroutine performs a status station for each extension gathered in the list-registered sub-routine. The third subroutine performs an snmp get on each endpoint using the ip-address gathered int he list-registered subroutine.</p>
+<p>The first subroutine performs a 'list-registered' command against a given Communication Manager instance. The second subroutine performs a status station for each extension gathered from the list-registered sub-routine. The third subroutine performs an snmp get on each endpoint using the ip-address gathered from list-registered subroutine.</p>
 
 <p>Any of the subroutines can be modified to gather alternative data elements. However, the Avaya OSSI labels the data elements as hexadecimal field identifiers (FIDs). Therefore, you may need to run a few test commands to determine what FIDs you want.</p>
 
